Create test CI workflow
- Add `dotnet-test.yml` workflow that runs tests both on `ubuntu-24.04` (x86) and `ubuntu-24.04-arm`.
- Removed the mess-around project from the solution in source control.
- Fixed an "I forgot to update this yesterday" in the test csproj.
- Fixed a casing typo I didn't see due to windows superiority.

--- a/SimdIsMagicDust/SimdIsMagicDust.csproj
+++ b/SimdIsMagicDust/SimdIsMagicDust.csproj
@@ -16,7 +16,7 @@
 
   <Target Name="BuildScalar" AfterTargets="Build" Condition="'$(IsScalarBuild)' != 'true'">
     <MSBuild Projects="$(MSBuildProjectFullPath)" Properties="DefineConstants=DISABLE_MAGIC_DUST;Configuration=$(Configuration);OutputPath=$(OutputPath)Scalar\;IsScalarBuild=true" Targets="Build" />
-    <Move SourceFiles="$(OutputPath)Scalar\$(AssemblyName).dll" DestinationFiles="$(OutputPath)$(AssemblyName).Scalar.dll" />
+    <Move SourceFiles="$(OutputPath)Scalar\$(AssemblyName).dll" DestinationFiles="$(OutputPath)$(AssemblyName).scalar.dll" />
   </Target>
 
 </Project>
