--- a/SimdIsMagicDustTests/SimdIsMagicDustTests.csproj
+++ b/SimdIsMagicDustTests/SimdIsMagicDustTests.csproj
@@ -18,7 +18,7 @@
 
   <ItemGroup>
     <Reference Include="SimdIsMagicDust" Condition="'$(Configuration)' != 'Scalar'">
-      <HintPath>..\SimdIsMagicDust\bin\$(Configuration)\net9.0\SimdIsMagicDust.dll</HintPath>
+      <HintPath>..\SimdIsMagicDust\bin\Release\net9.0\SimdIsMagicDust.dll</HintPath>
     </Reference>
     <Reference Include="SimdIsMagicDust" Condition="'$(Configuration)' == 'Scalar'">
       <HintPath>..\SimdIsMagicDust\bin\Release\net9.0\SimdIsMagicDust.scalar.dll</HintPath>
