Int tests, fix tests, fix test tests
So `Lowlevel/TestHelperHelper.cs` didn't work as I expected due to _one_ assumption I failed to realize.
- The above file now uses a method instead of a const.
- [SimdTest] now correctly loads the scalar dependency.
- [SimdTest] now casts from a type to itself but in the main assembly.
- Int tests that at least work locally
- Fixed a bug in sse's hadd.

--- a/SimdIsMagicDustTests/SimdIsMagicDustTests.csproj
+++ b/SimdIsMagicDustTests/SimdIsMagicDustTests.csproj
@@ -27,7 +27,7 @@
 
   <Target Name="BuildScalar" AfterTargets="Build" Condition="'$(Configuration)' != 'Scalar' And '$(IsScalarBuild)' != 'true'">
     <MSBuild Projects="$(MSBuildProjectFullPath)"
-             Properties="Configuration=Scalar;IsScalarBuild=true"
+             Properties="DefineConstants=DISABLE_MAGIC_DUST;Configuration=Scalar;IsScalarBuild=true"
              Targets="Build" />
   </Target>
 
