Quick attempt to fix arm test failure
- I'll actually read the docs later lmao, I'm tired and was planning to stop working on this three hours ago
- The testrunner output in the CI doesn't list fully qualified names, so fix that too

--- a/.github/workflows/dotnet-test.yml
+++ b/.github/workflows/dotnet-test.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Build
       run: dotnet build --no-restore /p:DefineConstants="EXCLUDE_FROM_CI"
     - name: Test-x86
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test --no-build --verbosity normal -- NUnit.DisplayName=FullName
 
   test-arm:
 
@@ -43,4 +43,4 @@ jobs:
     - name: Build
       run: dotnet build --no-restore /p:DefineConstants="EXCLUDE_FROM_CI"
     - name: Test-arm
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test --no-build --verbosity normal -- NUnit.DisplayName=FullName
